--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     ports:
       - "9870:9870"  # Hadoop NameNode Web UI
       - "8088:8088"  # Hadoop ResourceManager Web UI
+      - "10000:10000"  # hive
     volumes:
       - namenode_data:/hadoopdata
     environment:
@@ -72,7 +73,7 @@ services:
       - "7077:7077"  # Spark Master Port
     environment:
       - SPARK_MASTER_HOST=0.0.0.0
-      - SPARK_HOME=/spark
+      - SPARK_HOME=/opt/spark
       - HADOOP_CONF_DIR=/opt/hadoop/etc/hadoop
     volumes:
       - ./spark/app:/app 
